gateway/1.5/modules/ROOT/pages/policies-automated-applying.adoc
= Applying Automated Policies
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:page-aliases: api-manager::automated-policy-apply.adoc, policies::policies-automated-applying.adoc

Users with *Organization Admin*, *Environment Admin*, or with a role to *Manage Policies* in the environment can create, edit and delete Automated Policies.

// == Task Prerequisites
//
// Before you apply an automated policy, ensure that:
//
// * Mule runtime engine (Mule) is installed with xref:api-manager::api-gateway-capabilities-mule4.adoc[Mule Gateway capabilities] enabled.
// * An xref:api-manager::api-instance-landing-page.adoc[API] configured with a basic endpoint or a proxy endpoint exists in API Manager.
// * A Mule application is deployed with a xref:connectors::http/http-listener-ref.adoc[HTTP(s) based flow], which is linked to the API through Autodiscovery.
// +
// When Autodiscovery is correctly configured in your Mule application, your application’s API is said to be tracked by or paired to API Manager.
//
// Autogenerated proxies handle these prerequisites in most cases. Mule Gateway reconciles the automated policies applied to an API in API Manager during runtime.

== Apply an Automated Policy in Connected Mode

To apply an automated policy:

. In API Manager, select *Automated Policies* from the left navigation menu.
. Click *Apply new automated policy*.
. Select the provided policy that you want to configure as a provided policy.
+
You can configure any included policies as an automated policy.
+
See the xref:policies-included-directory.adoc[] to learn how to configure each one of them, or xref:policies-custom-overview.adoc[] to learn how to create one.
// +
// When configuring an automated policy, at the bottom of the policy configuration page, there is a *Rule of Applications* sub-section. This dictates the set of runtimes that will be affected by the policy:
//
// * *Apply to all supported runtimes (4.1.1 and above)*. +
// All API proxies based on Mule 4.1.1 and later will be affected by the policy.
// * *Apply to a specific set of runtimes*. +
// You can configure a range of runtime versions to inherit the automated policy. +
// For example, if the input From is 4.1.2 and the To value is 4.1.4, the automated policy will be applied to all deployed APIs inside this range. An API deployed on 4.1.5 won’t be affected by the policy.
// +
// You can include values such as `4.1.x`. For example, adding a range from 4.1.1 to 4.1.x covers all runtime patch releases. An API Proxy based on 4.1.0 will not be included in this range, because it's lower than the 4.1.1 "from value."
+
If you are configuring a type of policy that also exists as a provided policy in an API proxy affected by your rule of application, you'll need to solve the conflict before continuing. Refer to the <<Conflict Management>> section below for more information on how to solve them.
. Click *Apply*

[TIP]
It’s recommended to apply an automated policy in a lower environment before applying in a production environment and ensure to review that an automated policy doesn't affect the existing API contracts.

=== Conflict Management

Since automated policies have priority over API-level policies, when adding an automated policy that it is already applied as an API-level policy, on an API deployed using the selected runtime range, a conflict results.

When a conflict is detected, a popup with the list of conflicting APIs displays. A message will be shown with the first 10 APIs with conflicts and the total amount. You can use this endpoint to access the list of all APIs:

[source,CURL,linenums]
--
curl -X GET \
https://anypoint.mulesoft.com/xapi/v1/automated-policies/{groupId}/{assetId}/conflicting-apis \
-H 'Authorization: Bearer {token}'
--

To solve conflicts, you can either select the APIs from the list of already configured APIs and manually disable or remove the conflicting policy or choose to override all conflicting policies for the already configured APIs. If this last option is chosen the conflicting policies in the APIs will be disabled. If Automated Policy is removed, the API policy will be re-enabled automatically.

=== Deploying New APIs

When managing new APIs, you can see information regarding the status of the automated policies applied to your environment in the *Policies* tab. No automated policies are shown until the application is in Active status. +
After the application is deployed, a list of applied automated policies will be listed in the *Policies* tab of the API.

Users with *View Policies* role for the environment will able to see the list of automated policies applied.
// +
// If an application is deployed to an environment which has an automated policy that doesn't cover the deployed runtime, for example with an automated policy affecting a runtime range from 4.1.2 to 4.1.4, and a user deploys to a 4.1.5 runtime, a notification will be sent to the organization, and environment administrators, to let them know of this activity.

=== Viewing Coverage Status

View the *Coverage status* of an API instances to find if an automated policy covers your API instance or why it doesn't. Typically, instances are not covered due to their runtime type or runtime version.

To view what API instances are covered by an automated policy:

. Navigate to *Anypoint Platform* > *API Manager*.
. In API Administration, click *Automated Policies*.
. Click the more options button (image:more-options-menu.png[1%,1%]) of the policy whose coverage you want to view, and then click *See covered APIs*.
. View the API instance's coverage status in the *Coverage status* column.

NOTE: To filter by coverage status, click the coverage status dropdown and select a coverage status option.

=== Auditing Applied Policies

It is possible to audit and get a list of all affected APIs by an automated policy. Reports can be filtered by runtime version, and by an operation.

To get the list of all automated policies in an environment:

[source,curl,linenums]
--
curl -X GET \
https://anypoint.mulesoft.com/apimanager/api/v1/organizations/{organizationId}/automated-policies?environmentId={envId} \
  -H 'Authorization: Bearer {token}'
--


To get the list of APIs included in the range of automated policy or APIs where the automated policy is not applied.

[source,curl,linenums]
--
curl -X GET \
https://anypoint.mulesoft.com/apimanager/api/v1/organizations/{organizationId}/automated-policies/{automatedPolicyId}/apis \
-H 'Authorization: Bearer {token}'
--

== Apply an Automated Policy in Local Mode

For information about applying an automated policy for Flex Gateway running in Local Mode, see xref:flex-local-secure-api-with-auto-policy.adoc[].

== See Also

* xref:policies-automated-overview.adoc[]
